[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "day00_bin"
# src = "src/bin/day00_bin.rs"
# 
# [[bin]]
# name = "day03_bin"
# src = "src/bin/day03_bin.rs"

# [[lib]]
# name = "day00"
# src = "src/lib/day00/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
